k8s/poll-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-service
  labels:
    app: poll-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poll-service
  template:
    metadata:
      labels:
        app: poll-service
    spec:
      containers:
        - name: poll-service
          image: ECR_REGISTRY/easy-polls-poll-service:IMAGE_TAG
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
