k8s/results-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: results-service
  labels:
    app: results-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: results-service
  template:
    metadata:
      labels:
        app: results-service
    spec:
      containers:
        - name: results-service
          image: ECR_REGISTRY/easy-polls-results-service:IMAGE_TAG
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m # base su cui l'HPA calcola la percentuale di utilizzo
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 128Mi
