k8s/poll-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: poll-service
spec:
  type: ClusterIP
  selector:
    app: poll-service
  ports:
    - port: 8080
      targetPort: 8080
