k8s/results-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: results-service
spec:
  type: ClusterIP
  selector:
    app: results-service
  ports:
    - port: 8080
      targetPort: 8080
